@@ -1,3 +1,9 @@
+Development Portal (2024-09-04 shi)
+==============================
+Remove CRS from sectors table
+Remove data descriptions for CRS
+
+
 Development Portal (2024-09-03 shi)
 ==============================
 Add activity status codes
